# lancache-orchestrator

./: .dockerignore  .gitignore  APPROVAL_LOG.md  CHANGELOG.md  CLAUDE.md  Dockerfile  FEATURES.md  PROJECT_BIBLE.md  PROJECT_INTAKE.md  Pipfile  README.md  RELEASE_NOTES.md  lancache-orchestrator-brief.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements-steam-worker.in  requirements-steam-worker.txt  requirements.in  requirements.txt
.claude/: build-progress.json  manifest.json  orchestrator-source.json  phase-state.json  process-state.json  settings.json  tool-preferences.json  tool-usage.json
.claude-backup/2026-04-20T080315/: RESTORE.md  restore.sh
.github/: dependabot.yml
.github/workflows/: ci.yml
.semgrep/: orchestrator-rules.yaml
docs/: known-limitations.md
docs/ADR documentation/: 0001-orchestrator-architecture.md  0008-migration-runner-architecture.md  0009-logging-framework-architecture.md  0010-settings-module-design.md  0011-db-pool-architecture.md  0012-fastapi-skeleton-architecture.md  0013-steam-subprocess-isolation.md  0014-epic-pure-python-manifest.md  0015-operator-driven-cache-purge.md
docs/deploy/: lxc-cutover-runbook.md
docs/phase-1/: architecture-proposal.md  data-model.md  interface-spec.md  threat-model.md
docs/reference/: builders-guide.md  cli-setup-addendum.md  executive-review.md  governance-framework.md  security-scan-guide.md  user-guide.md
docs/security-audits/: bl10-f1-steam-auth-substrate-security-audit.md  bl11-library-sync-security-audit.md  bl12-manifest-fetcher-security-audit.md  bl5-f9-fastapi-skeleton-security-audit.md  bl6-f9-platforms-readonly-security-audit.md  bl7-f9-games-readonly-security-audit.md  bl8-f9-jobs-readonly-security-audit.md  bl9-f9-manifests-readonly-security-audit.md  db-pool-security-audit.md  epic-prefill-status-based-security-audit.md  epic-validation-parity-security-audit.md  f10-status-page-security-audit.md  f11-cli-security-audit.md  f12-scheduler-subsystem-security-audit.md  f13-scheduled-sweep-security-audit.md  f18-cache-purge-security-audit.md  f5-steam-prefill-security-audit.md  f6-epic-prefill-security-audit.md  f7-cache-validator-security-audit.md  f8-block-list-security-audit.md  force-prefill-security-audit.md  id1-sqlite-migrations-security-audit.md  id2-lancache-self-test-security-audit.md  id3-structured-logging-security-audit.md  id4-settings-security-audit.md  id6-startup-job-reaper-security-audit.md  issue-141-games-detail-endpoint-security-audit.md  issue-225-auto-classify-block-security-audit.md  issue-228-fetcher-transient-retry-security-audit.md  issue-229-drop-advertising-type-security-audit.md  issue-229-selection-classifier-security-audit.md  manual-download-checker-agent-security-audit.md  mp-only-exclusion-security-audit.md  piece1-steam-prune-selection-security-audit.md  piece2-epic-auto-download-security-audit.md  piece3-gameshelf-exclusions-security-audit.md  scheduler-start-leak-fix-security-audit.md  sev3-cluster-remediation-security-audit.md  sev4-backlog-remediation-security-audit.md  steam-auth-status-live-security-audit.md  (+5 more)
docs/spikes/: spike-g-lancache-deletion-behavior.md
docs/test-results/: 2026-04-20_spike-c_pass.md  2026-04-20_spike-d-mock_pass.md  2026-04-21_spike-a_pass.md  2026-04-21_spike-b_pass.md  2026-06-14_uat-session-11-v1.md
evaluation-prompts/Projects/: README.md  compose.sh  run-reviews.sh
migrations/: 0001_initial.sql  0001_initial_down.sql
scripts/: check-changelog.sh  check-maintenance.sh  check-phase-gate.sh  check-updates.sh  install-hooks.sh  intake-wizard.sh  pending-approval.sh  process-checklist.sh  reconfigure-project.sh  resolve-tools.sh  session-end-qdrant-reminder.sh  session-mcp-gate.sh  session-test-gate-check.sh  track-tool-usage.sh  upgrade-project.sh  validate.sh  verify-install.sh
scripts/git-hooks/: pre-commit
scripts/host-drivers/: bitbucket.sh  github.sh
scripts/lib/: host.sh
spikes/: README.md  requirements-spikes.txt  spike_a2_steam_modern.md  spike_a3_steam_manifest.md  spike_a4_lancache_cache_key.md  spike_a5_prefill.md  spike_a_steam_prefill.py  spike_b_epic_prefill.py  spike_c_validator.py  spike_d_gevent_bridge.py  spike_e_topology.py  spike_f_loadtest.py
templates/intake-suggestions/: common.json  desktop.json  mobile.json  web.json
tests/: test_dockerfile.py  test_licenses.py
tests/agent/: conftest.py  test_agent_security.py  test_app_lifespan.py  test_e2e.py  test_epic_purge.py  test_epic_validate.py  test_health.py  test_import_isolation.py  test_jobs.py  test_manifest_archive.py  test_manifest_locator.py  test_manifest_parser.py  test_manual_downloads.py  test_paths.py  test_pull.py  test_puller.py  test_stat.py  test_steam.py  test_steam_purge.py  test_steam_validate.py
tests/api/: conftest.py  test_app_factory.py  test_auth_router.py  test_block_list_router.py  test_epic_auth_router.py  test_lifespan.py  (+27 more)
(+363 files in other folders)
