[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lancache-orchestrator"
version = "0.1.0"
requires-python = ">=3.12"
description = "Orchestrator to verify lancache is updating all games correctly"
license = "MIT"

[project.scripts]
orchestrator-cli = "orchestrator.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"orchestrator.db.migrations" = ["*.sql", "CHECKSUMS"]

# --- Ruff (linter + formatter) ---
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]
extend-exclude = ["spikes"]
force-exclude = true

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print (no print statements)
]

[tool.ruff.lint.isort]
known-first-party = ["orchestrator"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]  # allow assert in tests
# test_logging.py asserts redaction by necessarily including fake credential
# literals in test inputs; S105/S106 would flood the signal there.
"tests/core/test_logging.py" = ["S101", "S105", "S106"]

# --- mypy (strict) ---
[tool.mypy]
strict = true
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["apscheduler.*", "aiosqlite.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["spikes.*"]
ignore_errors = true

# --- pytest ---
[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
# pydantic-settings emits this warning on every Settings() construction when
# the configured secrets_dir ('/run/secrets') isn't present on the host.
# That's correct behavior in Docker but pure noise in the test environment,
# where tests never rely on production secret mounts. Silenced per-message
# to avoid masking unrelated UserWarnings.
filterwarnings = [
    'ignore:directory "/run/secrets" does not exist:UserWarning',
]
markers = [
    "slow: marks tests that simulate sustained workload (deselect with -m 'not slow' or run via -m slow)",
]
addopts = ["-m", "not slow"]

# --- coverage ---
[tool.coverage.run]
source = ["src/orchestrator"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
# Exclude lines that are defensive guards or platform-specific branches hard
# to exercise in CI. Explicit rather than generic to keep the signal.
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "return NotImplemented",
    "if sys.platform == \"darwin\":",
    "if sys.platform.startswith\\(\"linux\"\\):",
]
